<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="co.edu.udea.compumovil.ws_images.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20dp"
                android:text="@string/descargar" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/hint_id"
                    android:layout_weight="4"
                    android:id="@+id/txt_id" />
                <Button
                    android:text="@string/hint_consultar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:onClick="onClickButton"
                    android:id="@+id/btn_cunsultar"
                    android:layout_weight="2" />
            </LinearLayout>

            <TextView
                android:id="@+id/lbl_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_id" />
            <TextView
                android:id="@+id/lbl_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_nombre" />
            <TextView
                android:id="@+id/lbl_apellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_apellido" />
            <TextView
                android:id="@+id/lbl_genero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_genero" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/img_mostrar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20dp"
                android:text="@string/cargar"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/property_nombre"
                android:id="@+id/txt_nombre" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/property_apellido"
                android:id="@+id/txt_apellido" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/property_genero"
                android:id="@+id/txt_genero" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/img_agregar" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/seleccionar_imagen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:onClick="onClickButton"
                    android:id="@+id/btn_seleccionar"
                    android:layout_weight="1" />
                <Button
                    android:text="@string/hint_insertar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_agregar"
                    android:onClick="onClickButton"
                    android:layout_weight="1" />

            </LinearLayout>

            </LinearLayout>
    </ScrollView>
</LinearLayout>
